Enum "permission" {
  "attachment.delete"
  "attachment.read"
  "attachment.upload"
  "channel.addChannelGroup"
  "channel.createChannel"
  "channel.createMessage"
  "channel.deleteChannel"
  "channel.deleteChannelGroup"
  "channel.deleteChannelType"
  "channel.deleteMessage"
  "channel.deleteOwnMessage"
  "channel.editChannel"
  "channel.editChannelGroup"
  "channel.editMessage"
  "channel.editOwnMessage"
  "channel.readChannel"
  "channel.readMessage"
  "config.readValue"
  "config.updateValue"
  "role.createRole"
  "role.deleteRole"
  "role.editRole"
  "user.createUser"
  "user.deleteUser"
  "user.editUser"
  "user.readUser"
  "workspace.createWorkspace"
  "workspace.deleteWorkspace"
  "workspace.readWorkspace"
  "workspace.updateWorkspace"
}

Table "roles" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "users" {
  "id" uuid [pk, not null, default: `uuidv7()`]
  "nickname" varchar(20) [not null]
  "full_name" varchar(255)
  "active" bool [not null, default: false]
  "verified" bool [not null, default: false]
  "banned" bool [not null, default: false]
  "muted" bool [not null, default: false]
  "email" varchar(255) [unique, not null]
  "avatar_url" text
  "password" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "user_roles" {
  "user_id" uuid [not null]
  "role_id" int4 [not null]

  Indexes {
    (user_id, role_id) [pk, type: btree, name: "user_roles_pkey"]
  }
}

Table "secure_objects" {
  "id" int4 [pk, not null, increment]
  "description" jsonb
}

Table "user_acls" {
  "user_id" uuid [not null]
  "sec_obj_id" int4 [not null]
  "permissions" "permission[]" [not null, default: `'{}'`]

  Indexes {
    (user_id, sec_obj_id) [pk, type: btree, name: "user_acls_pkey"]
  }
}

Table "role_acls" {
  "role_id" int4 [not null]
  "sec_obj_id" int4 [not null]
  "permissions" "permission[]" [not null, default: `'{}'`]

  Indexes {
    (role_id, sec_obj_id) [pk, type: btree, name: "role_acls_pkey"]
  }
}

Table "user_channel_settings" {
  "user_id" uuid [not null]
  "channel_id" int4 [not null]
  "last_seen_message" timestamptz [not null]

  Indexes {
    (user_id, channel_id) [pk, type: btree, name: "user_channel_settings_pkey"]
  }
}

Table "workspaces" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "sec_obj_id" int4 [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "channel_types" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "key" varchar(255) [not null]
  "sec_obj_id" int4 [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "channels" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "channel_type_id" int4 [not null]
  "workspace_id" int4
  "sec_obj_id" int4 [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "is_dm" bool [not null, default: false]
}

Table "channel_groups" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "workspace_id" int4 [not null]
  "channel_ids" "int4[]" [not null, default: 'ARRAY[integer[]']
  "order" int4 [not null, default: 0]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "configs" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "value" varchar(2048) [not null]
  "type" varchar(255)
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    name [type: btree, name: "ix_configs_name"]
  }
}

Table "messages" {
  "id" int4 [pk, not null, increment]
  "channel_id" int4 [not null]
  "user_id" uuid [not null]
  "content" varchar(4096) [not null]
  "attachment_ids" "int4[]" [not null, default: 'ARRAY[integer[]']
  "url_preview_ids" "int4[]" [not null, default: 'ARRAY[integer[]']
  "status" varchar(50) [not null]
  "parent_id" int4
  "children_count" int4 [not null, default: 0]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "reply_to" int4

  Indexes {
    channel_id [type: btree, name: "ix_messages_channel_id"]
    parent_id [type: btree, name: "ix_messages_parent_id"]
    reply_to [type: btree, name: "ix_messages_reply_to"]
    user_id [type: btree, name: "ix_messages_user_id"]
  }
}

Table "message_reactions" {
  "message_id" int4 [not null]
  "user_id" uuid [not null]
  "code" varchar(255) [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (message_id, user_id, code) [pk, type: btree, name: "pk_message_reactions"]
    message_id [type: btree, name: "ix_message_reactions_message_id"]
    user_id [type: btree, name: "ix_message_reactions_user_id"]
  }
}

Table "attachments" {
  "id" int4 [pk, not null, increment]
  "user_id" uuid [not null]
  "url_path" varchar(4096) [not null]
  "original_file_name" varchar(4096) [not null]
  "extension" varchar(4096) [not null]
  "mime_type" varchar(4096) [not null]
  "size" int8 [not null]
  "width" int4
  "height" int4
  "duration" int4
  "type" varchar(4096) [not null]
  "as_file" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    user_id [type: btree, name: "ix_attachments_user_id"]
  }
}

Table "url_previews" {
  "id" int4 [pk, not null, increment]
  "url" varchar(4096) [not null]
  "title" varchar(4096)
  "description" text
  "thumbnail_url" varchar(4096)
  "video_thumbnail_url" varchar(4096)
  "site_name" varchar(4096)
  "fav_icon_url" varchar(4096)
  "type" varchar(255)
  "author" varchar(4096)
  "thumbnail_width" int4
  "thumbnail_height" int4
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    url [type: btree, name: "ix_url_previews_url"]
  }
}

Table "draft_messages" {
  "id" int4 [pk, not null, increment]
  "channel_id" int4 [not null]
  "user_id" uuid [not null]
  "content" varchar(4096) [not null]
  "attachment_ids" "int4[]" [not null, default: 'ARRAY[integer[]']
  "parent_id" int4
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, channel_id, parent_id) [type: btree, unique, name: "ux_draft_messages_user_channel_parent"]
  }
}

Table "channel_members" {
  "channel_id" int4 [not null]
  "user_id" uuid [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (channel_id, user_id) [pk, type: btree, name: "channel_members_pkey"]
    user_id [type: btree, name: "ix_channel_members_user_id"]
  }
}

Ref "fk_channel_types_sec_obj_id":"secure_objects"."id" < "channel_types"."sec_obj_id" [delete: cascade]

Ref "fk_workspaces_sec_obj_id":"secure_objects"."id" < "workspaces"."sec_obj_id" [delete: cascade]

Ref "fk_attachments_user_id":"users"."id" < "attachments"."user_id" [delete: cascade]

Ref "fk_draft_messages_channel_id":"channels"."id" < "draft_messages"."channel_id" [delete: cascade]

Ref "fk_draft_messages_parent_id":"draft_messages"."id" < "draft_messages"."parent_id" [delete: cascade]

Ref "fk_draft_messages_user_id":"users"."id" < "draft_messages"."user_id" [delete: cascade]

Ref "fk_message_reactions_message_id":"messages"."id" < "message_reactions"."message_id" [delete: cascade]

Ref "fk_message_reactions_user_id":"users"."id" < "message_reactions"."user_id" [delete: cascade]

Ref "fk_messages_channel_id":"channels"."id" < "messages"."channel_id" [delete: cascade]

Ref "fk_messages_parent_id":"messages"."id" < "messages"."parent_id" [delete: cascade]

Ref "fk_messages_reply_to":"messages"."id" < "messages"."reply_to" [delete: set null]

Ref "fk_messages_user_id":"users"."id" < "messages"."user_id" [delete: cascade]

Ref "fk_user_channel_settings_user_id":"users"."id" < "user_channel_settings"."user_id" [delete: cascade]

Ref "fk_user_roles_role_id":"roles"."id" < "user_roles"."role_id" [delete: cascade]

Ref "fk_user_roles_user_id":"users"."id" < "user_roles"."user_id" [delete: cascade]

Ref "fk_user_acls_user_id":"users"."id" < "user_acls"."user_id" [delete: cascade]

Ref "fk_user_acls_sec_obj_id":"secure_objects"."id" < "user_acls"."sec_obj_id" [delete: cascade]

Ref "fk_role_acls_role_id":"roles"."id" < "role_acls"."role_id" [delete: cascade]

Ref "fk_role_acls_sec_obj_id":"secure_objects"."id" < "role_acls"."sec_obj_id" [delete: cascade]

Ref "fk_channels_sec_obj_id":"secure_objects"."id" < "channels"."sec_obj_id" [delete: cascade]

Ref "fk_channels_channel_type_id":"channel_types"."id" < "channels"."channel_type_id" [delete: cascade]

Ref "fk_channels_workspace_id":"workspaces"."id" < "channels"."workspace_id" [delete: cascade]

Ref "fk_channel_groups_workspace_id":"workspaces"."id" < "channel_groups"."workspace_id" [delete: cascade]

Ref "fk_channel_members_user_id":"users"."id" < "channel_members"."user_id" [delete: cascade]

Ref "fk_channel_members_channel_id":"channels"."id" < "channel_members"."channel_id" [delete: cascade]
